--- a/demo/partial/ui.html
+++ b/demo/partial/ui.html
@@ -11,6 +11,9 @@
 <body>
 
 <div id="hud" class="hud-pane">
+	<div class="hud-row">
+		<a href="index.html"> <input type="button" value="demos"/></a>
+	</div>
     <div class="hud-row">
         <select id="hud-viewRes">
             <option selected></option>
