added view source button to demos

--- a/demo/partial/ui.html
+++ b/demo/partial/ui.html
@@ -12,7 +12,10 @@
 
 <div id="hud" class="hud-pane">
 	<div class="hud-row">
-		<a href="index.html"> <input type="button" value="demos"/></a>
+		<a href="index.html"> <input type="button" value="index"/></a>
+	</div>
+	<div class="hud-row">
+		<input id="hud-source" type="button" value="source"/>
 	</div>
     <div class="hud-row">
         <select id="hud-viewRes">
